# IFC_BuildingEnvExtractor

./: CMakeLists.txt  CMakeSettings.json  README.md  exportsAC20-FZK-Haus.city.json  exportsAC20-FZK-Haus_report.city.json  main.cpp
GUI_code/: Ext_GUI.py
Pre_Build/: ~temp.json
grasshopper/: graphVisualiser.gh
inc/: DataManager.cpp  DataManager.h  DebugUtils.cpp  DebugUtils.h  IOManager.cpp  IOManager.h  cjCreator.cpp  cjCreator.h  errorCollection.cpp  errorCollection.h  floorProcessor.cpp  floorProcessor.h  helper.cpp  helper.h  roomProcessor.cpp  roomProcessor.h  settingsCollection.cpp  settingsCollection.h  stringManager.cpp  stringManager.h  surfaceCollection.cpp  surfaceCollection.h  voxel.cpp  voxel.h  voxelGrid.cpp  voxelGrid.h
